<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF9800"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_config"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/config"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_registrarTrilha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />


    <Button
        android:id="@+id/btn_registrarTrilha"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/registrarTrilha"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_consultarTrilhas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_config" />

    <Button
        android:id="@+id/btn_consultarTrilhas"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:textColor="#000000"
        android:text="@string/consultarTrilha"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/btn_registrarTrilha"
        app:layout_constraintBottom_toTopOf="@+id/btn_creditos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btn_creditos"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:textColor="#000000"
        android:text="@string/creditos"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/btn_consultarTrilhas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>